src/objects/MICO_Planning_Poker_Session__c.object
<CustomObject>
    <description>Business Description: This object is used as part of the user story estimation process

Used In: Mission Control App</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields is used to identify if a particular session is active or not.</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Planning_Poker_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>MICO_Sprint__c</referenceTo>
        <relationshipLabel>Planning Poker Sessions</relationshipLabel>
        <relationshipName>MICO_Planning_Poker_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Planning Poker Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Leader__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Session-{0}</displayFormat>
        <label>Planning Poker Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planning Poker Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>